--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <html lang="es">
 <head>
     <title>Estudio PF & Asociados</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <p class="logo">Palacios - Franco & Asociados</p>
-            <nav>
-                <a href="#somos-pf">Nuestra Vision</a>
-                <a href="#nuestros-servicios">Nuestros Servicios</a>
-                <a href="#caracteristicas">Contactanos</a>
-            </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container container-fluid">
+            <a class="navbar-brand" href="./index.html">Estudio PF & Asoc.</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#somos-pf">Nuestra Vision</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#nuestros-servicios">Nuestros Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#caracteristicas">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </header>
+    </nav>
 
     <section id="hero">
         <h1>Asesorate <br>con los Mejores</h1>
@@ -87,5 +100,6 @@
             <p>&copy; Pagina de Prueba 2023</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
