--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Estudio PF & Asociados</title>
+    <title>Estudio Franco - Palacios & Asociados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./iconos/bookmark-check-fill.svg" type="image/x-icon">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="botonera navbar navbar-expand-lg bg-body-tertiary">
         <div class="container container-fluid">
-            <a class="navbar-brand" href="./index.html">Estudio PF & Asoc.</a>
+            <a class="navbar-brand" href="./index.html">Estudio Franco - Palacios & Asoc.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +39,6 @@
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
-
                 <h2>Asesores <span class="color-acento">de Excelencia!</span></h2>
                 <p>En Estudio Jurídico PF & Asociados nos esforzamos para brindar un servicio legal de excelencia a nuestros clientes y
                 lograr la mejor defensa posible de sus derechos. Nos enfocamos en la ética profesional y actualización constante, para
@@ -94,12 +94,45 @@
         <h2>Tenes alguna Urgencia?</h2>
         <button>CONTACTANOS!</button>
     </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; Pagina de Prueba 2023</p>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Palacios - Franco & Asoc.</span>
         </div>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="me-3">
+                <a class="text-body-secondary" href="https://www.twitter.com/">
+                    <img src="./iconos/twitter.svg" alt="Seguinos en twitter">
+                </a>
+            </li>
+            <li class="me-3">
+                <a class="text-body-secondary" href="https://www.instagram.com/">
+                    <img src="./iconos/instagram.svg" alt="Seguinos en instagram">
+                </a>
+            </li>
+            <li class="me-3">
+                <a class="text-body-secondary" href="https://www.facebook.com/">
+                    <img src="./iconos/facebook.svg" alt="Seguinos en facebook">
+                </a>
+            </li>
+            <li class="me-3">
+                <a class="text-body-secondary" href="https://wa.me/1130331000">
+                    <img src="./iconos/whatsapp.svg" alt="Escribinos por whatsapp">
+                </a>
+            </li>
+            <li class="me-3">
+                <a class="text-body-secondary" href="mailto:marceloortiz82@gmail.com?subject=Hola Doctora, queria consultar sobre sus servicios&body=cuerpo del mensaje">
+                    <img src="./iconos/mail.svg" alt="Envianos un mail">
+                </a>
+            </li>
+        </ul>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
