--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./iconos/bookmark-check-fill.svg" type="image/x-icon">
 </head>
 <body>
-    <nav class="botonera navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="botonera navbar navbar-expand-lg">
         <div class="container container-fluid">
             <a class="navbar-brand" href="./index.html">Estudio Franco - Palacios & Asoc.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -120,6 +120,8 @@
                     <img src="./iconos/facebook.svg" alt="Seguinos en facebook">
                 </a>
             </li>
+        </ul>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="me-3">
                 <a class="text-body-secondary" href="https://wa.me/1130331000">
                     <img src="./iconos/whatsapp.svg" alt="Escribinos por whatsapp">
