--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
     <section id="hero">
         <h1>Asesorate <br>con los Mejores</h1>
-        <button>Urgencias Penales <br>24 hs!</button>
+        <a href="https://wa.me/1130331000">
+            <button>Urgencias Penales <br>24 hs!</button>
+        </a>
     </section>
 
     <section id="somos-pf">
