cambios de nombre

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Estudio Franco - Palacios & Asociados</title>
+    <title>PF & Asociados - Estudio Juridico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./iconos/bookmark-check-fill.svg" type="image/x-icon">
@@ -9,7 +9,7 @@
 <body>
     <nav class="botonera navbar navbar-expand-lg">
         <div class="container container-fluid">
-            <a class="navbar-brand" href="./index.html">Estudio Franco - Palacios & Asoc.</a>
+            <a class="navbar-brand" href="./index.html">PF & Asociados - Estudio Juridico</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -103,7 +103,7 @@
                     <use xlink:href="#bootstrap"></use>
                 </svg>
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Palacios - Franco & Asoc.</span>
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 PF & Asociados</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
